@@ -1,7 +1,5 @@
 package org.example;
 
-import org.example.types.PageHeader;
-import org.example.types.attributes.Attribute;
 import org.example.types.Page;
 import org.example.types.Relation;
 
@@ -9,19 +7,21 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class Main {
     private static final Path RELATION_FILE_PATH = Path.of("relation-file-1");
 
 
-    private static Page[] generatePages(int num) {
-        Page[] pages = new Page[num];
+    private static List<Page> generatePages(int num) {
+        List<Page> pageList = new ArrayList<>();
 
         for(int i=0; i<num; i++) {
-            pages[i] = Util.generateSamplePage(i, Constants.PAGE_SIZE);
+            Page page = Util.generateSamplePage(i+1);
+            pageList.add(page);
         }
 
-        return pages;
+        return pageList;
     }
 
     public static void main(String[] args) throws Exception {
@@ -29,32 +29,30 @@ public class Main {
         Files.write(RELATION_FILE_PATH, new byte[0], StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
 
         for(Page page: generatePages(10)) {
-            Files.writeString(RELATION_FILE_PATH, page.toString(),
-                StandardOpenOption.CREATE,
-                StandardOpenOption.WRITE,
-                StandardOpenOption.APPEND
-            );
+            Files.write(RELATION_FILE_PATH, page.serialize(), StandardOpenOption.CREATE, StandardOpenOption.WRITE, StandardOpenOption.APPEND);
         }
 
         Relation relation = new Relation(RELATION_FILE_PATH, Constants.PAGE_SIZE);
         Iterator<Page> pageIterator = relation.getPageIterator();
+        int pageNum = 0;
 
         while(pageIterator.hasNext()) {
             Page page = pageIterator.next();
-            System.out.println("\n" + page + "\n");
+            pageNum++;
+
+            System.out.printf("\nPAGE %d:\n", pageNum);
+
+            System.out.println("\nHEADER:");
+            String headerString = page.pageHeader.columnList.stream().map(column -> column.columnNumber + "-" + column.attributeType).collect(Collectors.joining(", "));
+            System.out.println(headerString);
+
+            System.out.println("\nTUPLES:");
+            page.tupleList.stream().forEach(tuple -> {
+                String tupleString = tuple.attributeList.stream().map(attribute -> attribute.getValue().toString()).collect(Collectors.joining(":"));
+                System.out.println(tupleString);
+            });
+
+            System.out.println("\n---------------------------------------------------------");
         }
-
-        List<Attribute.TYPES> types = new ArrayList<>();
-        types.add(Attribute.TYPES.STRING);
-        types.add(Attribute.TYPES.STRING);
-        types.add(Attribute.TYPES.INTEGER);
-        types.add(Attribute.TYPES.STRING);
-        types.add(Attribute.TYPES.INTEGER);
-
-        PageHeader pageHeader = PageHeader.fromAttributes(types);
-
-        System.out.println(pageHeader.serialize());
-        System.out.println(Arrays.toString(pageHeader.serialize()));
-
     }
 }
